--- a/app/src/main/res/layout/medicinski_layout.xml
+++ b/app/src/main/res/layout/medicinski_layout.xml
@@ -10,9 +10,9 @@
 
     <TextView
         android:id="@+id/nazivItem"
-        android:layout_width="230dp"
-        android:layout_height="30dp"
-        android:layout_marginStart="20dp"
+        android:layout_width="260dp"
+        android:layout_height="40dp"
+        android:layout_marginStart="15dp"
         android:layout_marginTop="25dp"
         android:layout_marginEnd="20dp"
         android:text="TextView"
@@ -22,11 +22,11 @@
 
     <ImageView
         android:id="@+id/slikaItem"
-        android:layout_width="110dp"
-        android:layout_height="130dp"
+        android:layout_width="92dp"
+        android:layout_height="124dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:layout_marginBottom="5dp"
+        android:layout_marginBottom="15dp"
         android:src="@drawable/biljka"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -34,9 +34,9 @@
 
     <TextView
         android:id="@+id/upozorenjeItem"
-        android:layout_width="230dp"
-        android:layout_height="30dp"
-        android:layout_marginStart="20dp"
+        android:layout_width="260dp"
+        android:layout_height="40dp"
+        android:layout_marginStart="15dp"
         android:layout_marginTop="12dp"
         android:layout_marginEnd="20dp"
         android:text="TextView"
@@ -50,7 +50,9 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
+        android:layout_marginBottom="18dp"
         android:text="TextView"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/slikaItem"
         app:layout_constraintTop_toBottomOf="@+id/upozorenjeItem" />
 
