--- a/app/src/main/res/layout/medicinski_layout.xml
+++ b/app/src/main/res/layout/medicinski_layout.xml
@@ -14,9 +14,7 @@
         android:layout_height="40dp"
         android:layout_marginStart="15dp"
         android:layout_marginTop="24dp"
-        android:layout_marginEnd="20dp"
         android:text="TextView"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/slikaItem"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -38,15 +36,13 @@
         android:layout_height="40dp"
         android:layout_marginStart="15dp"
         android:layout_marginTop="12dp"
-        android:layout_marginEnd="20dp"
         android:text="TextView"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/slikaItem"
         app:layout_constraintTop_toBottomOf="@+id/nazivItem" />
 
     <TextView
         android:id="@+id/korist1Item"
-        android:layout_width="wrap_content"
+        android:layout_width="70dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
@@ -58,24 +54,22 @@
 
     <TextView
         android:id="@+id/korist2Item"
-        android:layout_width="wrap_content"
+        android:layout_width="70dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="25dp"
         android:layout_marginTop="20dp"
-        android:layout_marginEnd="25dp"
         android:text="TextView"
-        app:layout_constraintEnd_toStartOf="@+id/korist3Item"
         app:layout_constraintStart_toEndOf="@+id/korist1Item"
         app:layout_constraintTop_toBottomOf="@+id/upozorenjeItem" />
 
     <TextView
         android:id="@+id/korist3Item"
-        android:layout_width="wrap_content"
+        android:layout_width="70dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="25dp"
         android:layout_marginTop="20dp"
-        android:layout_marginEnd="20dp"
         android:text="TextView"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/korist2Item"
         app:layout_constraintTop_toBottomOf="@+id/upozorenjeItem" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
