--- a/app/src/main/res/layout/medicinski_layout.xml
+++ b/app/src/main/res/layout/medicinski_layout.xml
@@ -10,20 +10,20 @@
 
     <TextView
         android:id="@+id/nazivItem"
-        android:layout_width="260dp"
-        android:layout_height="40dp"
+        android:layout_width="235dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="15dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="25dp"
         android:text="TextView"
         app:layout_constraintStart_toEndOf="@+id/slikaItem"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/slikaItem"
-        android:layout_width="92dp"
-        android:layout_height="124dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_width="120dp"
+        android:layout_height="135dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="15dp"
         android:layout_marginBottom="15dp"
         android:src="@drawable/biljka"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -32,10 +32,10 @@
 
     <TextView
         android:id="@+id/upozorenjeItem"
-        android:layout_width="260dp"
-        android:layout_height="40dp"
+        android:layout_width="235dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="15dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="15dp"
         android:text="TextView"
         app:layout_constraintStart_toEndOf="@+id/slikaItem"
         app:layout_constraintTop_toBottomOf="@+id/nazivItem" />
@@ -46,7 +46,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="15dp"
         android:layout_marginTop="20dp"
-        android:layout_marginBottom="18dp"
+        android:layout_marginBottom="50dp"
         android:text="TextView"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/slikaItem"
@@ -56,9 +56,11 @@
         android:id="@+id/korist2Item"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="40dp"
+        android:layout_marginStart="33dp"
         android:layout_marginTop="20dp"
+        android:layout_marginBottom="50dp"
         android:text="TextView"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/korist1Item"
         app:layout_constraintTop_toBottomOf="@+id/upozorenjeItem" />
 
@@ -66,9 +68,11 @@
         android:id="@+id/korist3Item"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="40dp"
+        android:layout_marginStart="33dp"
         android:layout_marginTop="20dp"
+        android:layout_marginBottom="49dp"
         android:text="TextView"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/korist2Item"
         app:layout_constraintTop_toBottomOf="@+id/upozorenjeItem" />
 
