--- a/app/src/main/res/layout/botanicki_layout.xml
+++ b/app/src/main/res/layout/botanicki_layout.xml
@@ -11,9 +11,9 @@
     <TextView
         android:id="@+id/nazivItem"
         android:layout_width="250dp"
-        android:layout_height="30dp"
+        android:layout_height="38dp"
         android:layout_marginStart="15dp"
-        android:layout_marginTop="25dp"
+        android:layout_marginTop="20dp"
         android:text="TextView"
         app:layout_constraintStart_toEndOf="@+id/slikaItem"
         app:layout_constraintTop_toTopOf="parent" />
@@ -21,7 +21,7 @@
     <ImageView
         android:id="@+id/slikaItem"
         android:layout_width="120dp"
-        android:layout_height="160dp"
+        android:layout_height="180dp"
         android:layout_marginStart="10dp"
         android:layout_marginTop="16dp"
         android:layout_marginBottom="15dp"
@@ -33,9 +33,9 @@
     <TextView
         android:id="@+id/porodicaItem"
         android:layout_width="250dp"
-        android:layout_height="30dp"
+        android:layout_height="38dp"
         android:layout_marginStart="15dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="8dp"
         android:text="TextView"
         app:layout_constraintStart_toEndOf="@+id/slikaItem"
         app:layout_constraintTop_toBottomOf="@+id/nazivItem" />
@@ -43,24 +43,20 @@
     <TextView
         android:id="@+id/klimatskiTipItem"
         android:layout_width="250dp"
-        android:layout_height="30dp"
+        android:layout_height="38dp"
         android:layout_marginStart="15dp"
-        android:layout_marginBottom="18dp"
+        android:layout_marginTop="8dp"
         android:text="TextView"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/slikaItem"
-        app:layout_constraintTop_toBottomOf="@+id/porodicaItem"
-        app:layout_constraintVertical_bias="0.288" />
+        app:layout_constraintTop_toBottomOf="@+id/porodicaItem" />
 
     <TextView
         android:id="@+id/zemljisniTipItem"
         android:layout_width="250dp"
-        android:layout_height="30dp"
+        android:layout_height="38dp"
         android:layout_marginStart="15dp"
-        android:layout_marginTop="12dp"
-        android:layout_marginBottom="12dp"
+        android:layout_marginTop="8dp"
         android:text="TextView"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/slikaItem"
         app:layout_constraintTop_toBottomOf="@+id/klimatskiTipItem" />
 
