--- a/app/src/main/res/layout/activity_nova_biljka.xml
+++ b/app/src/main/res/layout/activity_nova_biljka.xml
@@ -1,7 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
+<androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -145,23 +150,42 @@
         app:layout_constraintStart_toEndOf="@+id/jelaLV"
         app:layout_constraintTop_toBottomOf="@+id/profilOkusaLV" />
 
-    <!--    <Button
-            android:id="@+id/dodajBiljkuBtn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Dodaj biljku" />
+    <Button
+        android:id="@+id/dodajBiljkuBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="40dp"
+        android:layout_marginEnd="70dp"
+        android:layout_marginBottom="10dp"
+        android:text="Dodaj biljku"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/slikaIV" />
 
-        <Button
-            android:id="@+id/uslikajBiljkuBtn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Uslikaj biljku" />
+    <Button
+        android:id="@+id/uslikajBiljkuBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="60dp"
+        android:layout_marginTop="40dp"
+        android:layout_marginBottom="10dp"
+        android:text="Uslikaj biljku"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/slikaIV" />
 
-        <ImageView
-            android:id="@+id/slikaIV"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/biljka" />-->
+    <ImageView
+        android:id="@+id/slikaIV"
+        android:layout_width="452dp"
+        android:layout_height="285dp"
+        android:layout_marginStart="35dp"
+        android:layout_marginTop="35dp"
+        android:layout_marginEnd="35dp"
+        android:src="@drawable/biljka"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/jelaLV" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
